--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,11 @@
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-
+    <img class="logo" src="./images/logo.png">
+    
     <div ng-view></div>
 
-<div>Angular seed app: v<span app-version></span></div>
+<!-- <div>Angular seed app: v<span app-version></span></div> -->
 
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
