Ajustes na seleção da plataforma e criação da etapa de seleção de pacote

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
 <script src="platform/platform.js"></script>
-<script src="view2/view2.js"></script>
+<script src="package/package.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
