--- a/app/platform/platform.html
+++ b/app/platform/platform.html
@@ -1,7 +1,9 @@
 <p>Choose the platform</p>
 <form-steps>
     <ul>
-        <li ng-repeat="platform in platforms">
+        <li
+            ng-repeat="platform in platforms"
+            ng-click="selectPlatform(platform)">
             {{platform.nome}}
         </li>
     </ul>
