Criação do formulário e console com resultado final

--- a/app/index.html
+++ b/app/index.html
@@ -26,9 +26,11 @@
 <script src="app.js"></script>
 <script src="platform/platform.js"></script>
 <script src="package/package.js"></script>
+<script src="register-form/register-form.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
 <script src="components/form-steps/form-steps.js"></script>
+<script src="components/field/field.js"></script>
 </body>
 </html>
